package com.example.clientcleaningcenter.model;

public class LoginResponse {

    private String token;
    private String tokenType;
    private String username;

    public String getToken() {
        return token;
    }

    public String getTokenType() {
        return tokenType;
    }

    public String getUsername() {
        return username;
    }
}